--- a/css/action.css
+++ b/css/action.css
@@ -1,19 +1,3 @@
-@-webkit-keyframes up_show1_ac {
-	0% {
-		opacity: 0
-	}
-	50% {} 100% {
-		top: 0px;
-	}
-}
-@keyframes up_show1_ac {
-	0% {
-		opacity: 0
-	}
-	50% {} 100% {
-		top: 0px;
-	}
-}
 @-webkit-keyframes left-fade-in-ac {
 	0% {
 		opacity: 0
@@ -24,6 +8,32 @@
 	}
 	100% {
 		-webkit-opacity: 1;
+		left: 0%;
+	}
+}
+@-moz-keyframes left-fade-in-ac {
+	0% {
+		-moz-opacity: 0
+	}
+	50% {
+		left: -100%;
+		-moz-opacity: 0;
+	}
+	100% {
+		-moz-opacity: 1;
+		left: 0%;
+	}
+}
+@-o-keyframes left-fade-in-ac {
+	0% {
+		opacity: 0
+	}
+	50% {
+		left: -100%;
+		opacity: 0;
+	}
+	100% {
+	    opacity: 1;
 		left: 0%;
 	}
 }
@@ -42,7 +52,7 @@
 }
 @-webkit-keyframes right-fade-in-ac {
 	0% {
-		opacity: 0
+		-webkit-opacity: 0
 	}
 	50% {
 		right: -100%;
@@ -50,6 +60,32 @@
 	}
 	100% {
 		-webkit-opacity: 1;
+		right: 0%;
+	}
+}
+@-moz-keyframes right-fade-in-ac {
+	0% {
+		-moz-opacity: 0
+	}
+	50% {
+		right: -100%;
+		-moz-opacity: 0;
+	}
+	100% {
+		-moz-opacity: 1;
+		right: 0%;
+	}
+}
+@-o-keyframes right-fade-in-ac {
+	0% {
+		opacity: 0
+	}
+	50% {
+		right: -100%;
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
 		right: 0%;
 	}
 }
@@ -68,7 +104,7 @@
 }
 @-webkit-keyframes top-fade-in-ac {
 	0% {
-		opacity: 0
+		-webkit-opacity: 0
 	}
 	50% {
 		-webkit-opacity: 0;
@@ -76,6 +112,30 @@
 	100% {
 		-webkit-opacity: 1;
 		-webkit-transform: translateY(100px);
+	}
+}
+@-moz-keyframes top-fade-in-ac {
+	0% {
+		-moz-opacity: 0
+	}
+	50% {
+		-moz-opacity: 0;
+	}
+	100% {
+		-moz-opacity: 1;
+		-moz-transform: translateY(100px);
+	}
+}
+@-o-keyframes top-fade-in-ac {
+	0% {
+		opacity: 0
+	}
+	50% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(100px);
 	}
 }
 @keyframes top-fade-in-ac {
@@ -92,7 +152,7 @@
 }
 @-webkit-keyframes bottom-fade-in-ac {
 	0% {
-		opacity: 0
+		-webkit-opacity: 0
 	}
 	50% {
 		-webkit-opacity: 0;
@@ -100,6 +160,29 @@
 	100% {
 		-webkit-opacity: 1;
 		-webkit-transform: translateY(-100px);
+	}
+}
+@-moz-keyframes bottom-fade-in-ac {
+	0% {
+		-moz-opacity: 0
+	}
+	50% {
+		-moz-opacity: 0;
+	}
+	100% {
+		-moz-opacity: 1;
+		-moz-transform: translateY(-100px);
+	}
+}@-o-keyframes bottom-fade-in-ac {
+	0% {
+		opacity: 0
+	}
+	50% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(-100px);
 	}
 }
 @keyframes bottom-fade-in-ac {
@@ -114,19 +197,43 @@
 		transform: translateY(-100px);
 	}
 }
-
-
 @-webkit-keyframes min-fade-in-ac {
+	0% {
+		-webkit-opacity: 0
+	}
+	50% {
+		-webkit-opacity: 0;
+		-webkit-transform: scale(0, 0);
+	}
+	100% {
+		-webkit-opacity: 1;
+		-webkit-transform: scale(1, 1);
+	}
+}
+@-moz-keyframes min-fade-in-ac {
+	0% {
+		-moz-opacity: 0
+	}
+	50% {
+		-moz-opacity: 0;
+		-moz-transform: scale(0, 0);
+	}
+	100% {
+		-moz-opacity: 1;
+		-moz-transform: scale(1, 1);
+	}
+}
+@-o-keyframes min-fade-in-ac {
 	0% {
 		opacity: 0
 	}
 	50% {
-		-webkit-opacity: 0;
-		-webkit-transform: scale(0,0);
+		opacity: 0;
+		transform: scale(0, 0);
 	}
 	100% {
-		-webkit-opacity: 1;
-		-webkit-transform: scale(1,1);
+		opacity: 1;
+		transform: scale(1, 1);
 	}
 }
 @keyframes min-fade-in-ac {
@@ -134,11 +241,11 @@
 		opacity: 0
 	}
 	50% {
-		transform: scale(0,0);
+		transform: scale(0, 0);
 		opacity: 0;
 	}
 	100% {
 		opacity: 1;
-		transform: scale(1,1);
+		transform: scale(1, 1);
 	}
 }
